# InGa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
.cache/clangd/index/: allocator.cpp.37E240894A53C907.idx  allocator.cpp.F3819A2F39896F00.idx  allocator.h.B3F5830E83BC37A7.idx  clock.cpp.543DCAE63B7D11CE.idx  clock.h.4920D753FD07B9C3.idx  container.h.B07AFF8ABDF0017E.idx  export.h.8344E3D92DE87C32.idx  inga_platform.h.C4555179FEDF68C8.idx  internal_allocator.h.39DE881D7350A199.idx  log.cpp.A3F74E720B6CFAF4.idx  log.h.7111D16F529BE0B8.idx  main.cpp.7E422EC99B135644.idx  main.cpp.AA1BA5FEE4D05E47.idx  stl_allocator.h.103BABB9BA5C8CF0.idx  string.h.6E6D52547B961CA0.idx  timer.cpp.55D203E105043050.idx  timer.h.9B3A139CC6422977.idx
InGa/: CMakeLists.txt
InGa/include/InGa/: InGa.h
InGa/include/InGa/core/: Window.h  allocator.h  clock.h  container.h  export.h  inga_platform.h  log.h  stl_allocator.h  string.h  timer.h
InGa/include/InGa/gfx/: Context.h  RenderDevice.h  context.h  render_device.h
InGa/include/InGa/gfx/vulkan/: vk_types.h
InGa/src/: InGa.cpp
InGa/src/core/: Window.cpp  allocator.cpp  clock.cpp  internal_allocator.h  log.cpp  timer.cpp  window.cpp
InGa/src/gfx/vulkan/: Context.cpp  RenderDevice.cpp  context.cpp  render_device.cpp  vk_types.cpp
IngaDemo/: CMakeLists.txt
IngaDemo/src/: main.cpp
src/libraries/InGa/: CMakeLists.txt
src/libraries/InGa/include/InGa/core/: container.h  inga_platform.h  log.h
src/libraries/InGa/src/core/: allocator.cpp  internal_allocator.h
src/projects/IngaDemo/: CMakeLists.txt
src/projects/IngaDemo/src/: main.cpp
